--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -129,7 +129,7 @@ section:nth-of-type(6) {
     height: 14em;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
     /* enter needed declarations here */
 }
