--- a/css/sandbox.css
+++ b/css/sandbox.css
@@ -1,97 +1,164 @@
-* {
-    box-sizing: border-box;
-}
-body {
-    margin: 0;
-    font-family: "Nunito Sans", SansSerif;
-    min-height: 100vh; /* to keep footer at the bottom of the page */
-}
-footer {
-    background: black;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-.container {
-    min-width: 768px;
-    width: 95%;
-    max-width: 1400px;
-    margin: 0 auto;
-}
-h1 {
-    font-size: 2em;
-}
-footer h1 {
-    margin: 0;
-    font-weight: bolder;
-}
-h5 {
-    color: white;
-    font-weight: 200;
-    text-align: center;
-}
-footer a {
-    color: white;
-    text-decoration: none;
-}
-footer .icon-wrapper:hover,
-footer .top-footer a:hover {
-    color: black;
-    background: white;
-}
-footer ul {
-    list-style: none;
+*{
     margin: 0;
     padding: 0;
 }
-footer .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 4em 0;
-    height: 30em;
+
+h1{
+    font-family: sans-serif;
+}
+section, nav, .alert-info{
+    font-family: Geneva;
 }
 
-.top-footer {
-    /* here we make the top footer section a flex container to space out the multiple lists of links */
-    display: flex;
-    justify-content: space-between;
+h2{
+    font-weight: bold;
 }
-.icon-wrapper {
-    border: 2px solid grey;
-    border-radius: 2.4em;
-    height: 2.4em;
-    width: 2.4em;
-    display: flex;
-}
+/*Cell Phone Mode*/
 
-.logo-div {
-    /* here we set a larger size along the main axis and push the div a bit up for aesthetics */
-    flex-basis: 25%;
-    position: relative;
-    bottom: 5px;
-}
-.social-media-links {
-    /* here we make the div containing the social media links into a flex container to orient them in a row */
-    display: flex;
-}
+@media screen and (max-width:480px) {
 
-footer .bottom-footer {
-    /* here we ensure the social media link container is horizontally centered by setting its parent to be a flex container */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    h1 {
+        text-align: center;
+        margin-bottom: 0.5rem;
+    }
 
-footer .top-footer a {
-    text-transform: uppercase;
-    font-weight: 200;
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    ul {
+        list-style-type: none;
+        width: 100%;
+    }
+
+    li {
+        background-color: lightgrey;
+        padding: 15px;
+        margin: 10px;
+        text-align: center;
+    }
+
+    img {
+        display: flex;
+        width: calc(100% - 20px);
+        margin: 10px;
+    }
+
+    .alert-info {
+        text-align: center;
+        background-color: lightcyan;
+        border: solid 1px grey;
+        padding: 15px;
+        margin: 10px;
+    }
+
+    .alert-info a {
+        color: black;
+        text-decoration: none;
+    }
+
+    section {
+        padding: 15px;
+    }
+
+    h2 {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
+    .sub-section {
+        font-style: italic;
+    }
+
+    footer {
+        display: flex;
+        margin: 50px 15px 15px 15px;
+        align-items: flex-end;
+    }
+
+    i {
+        font-size: 30px;
+    }
+
+    footer p {
+        flex-grow: 1;
+    }
+
 }
-footer .bottom-footer a {
-    margin: .3em;
-}
-.line {
-    width: 100%;
-    height: 1px;
-    background: grey;
+/*Full Screen Mode*/
+@media screen and (min-width: 481px){
+
+    *{
+        padding: 0;
+        margin: 0;
+    }
+
+    .alert-info{
+        display: none;
+    }
+
+    h1{
+        position: absolute;
+        padding: 0.5em;
+
+    }
+
+    ul{
+        display: flex;
+        justify-content: flex-end;
+        padding: 0.5em;
+    }
+    li{
+        padding: 1em;
+        list-style-type: none;
+    }
+
+    img{
+        width: calc(100% - 35px);
+        margin: 1em;
+    }
+
+    .main, .sub-section{
+        margin: 1em;
+    }
+
+    section{
+        margin:auto;
+        display: inline-flex;
+        flex-direction: column;
+        width: 100%;
+
+    }
+
+    .main{
+        align-self: flex-start;
+        width: calc(60% - 50px);
+    }
+
+    .sub-section{
+        align-self: flex-end;
+        width: calc(40% - 40px);
+        font-style: italic;
+    }
+
+    h2{
+        padding: 2em 0 2em 0 ;
+    }
+
+    footer{
+        display: flex;
+        padding: 10em 1em 5em 1em;
+
+    }
+
+    i {
+        font-size: 30px;
+    }
+
+    footer p {
+        flex-grow: 1;
+    }
 }
