--- a/css/custom.css
+++ b/css/custom.css
@@ -1,31 +1,6 @@
+.jumbotron {
+    background-image: url("/img/pizza.png");
+    height: 346px;
+    background-size: cover;
 
-/*.jumbotron-fluid {*/
-/*    background-image: url("../img/pizza.png");*/
-/*}*/
-
-/*.text-center {*/
-/*    opacity: 0.6;*/
-/*}*/
-
-/*.crispyThin, .nonMeats, .handTossedSizes, .Meats, .cheese1, .sauce1, .sauce2 {*/
-/*    padding-left: 20px;*/
-/*}*/
-/*.list-group-item-sauce {*/
-/*    padding: 20px;*/
-/*    list-style-type: none;*/
-/*}*/
-
-<style>
-#search-btn {
-    background-color: white;
 }
-
-#main-jumbotron {
-    background-image: url("img/pizza.png");
-}
-
-#jumbotron-container {
-    padding: 0;
-    background-color: #ffffffa6;
-}
-</style>
