--- a/css/faq.css
+++ b/css/faq.css
@@ -1,12 +1,13 @@
-
+.page-wrapper {
+    background-color: #E8E8E8;
+}
 header {
-    border-bottom: 4px solid black;
+    border-bottom: 1px solid rgba(0, 0, 0, 25%);
     margin: 20px;
     padding-bottom: 10px;
 }
 header h1{
     font-size: 60px;
-    text-align: center;
 }
 section h1 {
     padding: 10px;
@@ -15,19 +16,39 @@ section dt{
     font-weight: bold;
     padding-top: 8px;
 }
-
-/*dd.invisible {*/
-/*    display: none;*/
-/*}*/
-
+dd.invisible {
+    display: none;
+}
+.toggleAll {
+    border-radius: 5px;
+    padding: 2px;
+    border: 1px solid black;
+    cursor: pointer;
+    max-height: 30px;
+}
 .subheader-button-wrapper {
     margin-bottom: 15px;
 }
-
+.small-toggle {
+    margin-left: 7px;
+    border: 1px solid black;
+    border-radius: 50%;
+    height: 15px;
+    width: 15px;
+    background-color: orange;
+}
 .container {
     margin-top: 25px;
 }
-
+h3 {
+    padding: 6px 0;
+}
+li {
+    padding: 3px;
+}
+.section-2{
+    padding-bottom: 25px;
+}
 button.highlight-btn {
     border: 1px solid black;
     border-radius: 5px;
@@ -35,11 +56,53 @@ button.highlight-btn {
     cursor: pointer;
 }
 .btn-on {
-    background-color: cornsilk;
+    background-color: lightgreen;
     transition:all .5s ease;
 }
-
-
+.section-3{
+    min-height: 450px;
+}
+.section-3 img {
+    border: 1px solid red;
+    width: 256px;
+    height: 156px;
+    border-radius: 50%;
+}
 .highlight {
     background-color: #FF0;
+}
+
+.big-box {
+    width: 100%;
+    display: flex;
+    margin: 20px auto;
+    justify-content: space-around;
+}
+.box {
+    height:156px;
+    width:256px;
+    border: black solid 1px;
+    background-color: white;
+    border-radius: 50%;
+}
+#left {
+    height:100%;
+    width:100%;
+    order: 1;
+    background-image: url("/img/yosemite.jpeg");
+    border-radius: 50%;
+}
+#center {
+    height:100%;
+    width:100%;
+    order: 2;
+    background-image: url("/img/yellowstone.jpeg");
+    border-radius: 50%;
+}
+#right {
+    height:100%;
+    width:100%;
+    order: 3;
+    background-image: url("/img/glacier.jpeg");
+    border-radius: 50%;
 }
