--- a/css/faq.css
+++ b/css/faq.css
@@ -1,6 +1,3 @@
-.page-wrapper {
-    background-color: #E8E8E8;
-}
 header {
     border-bottom: 1px solid rgba(0, 0, 0, 25%);
     margin: 20px;
@@ -8,6 +5,7 @@ header {
 }
 header h1{
     font-size: 60px;
+    text-align: center;
 }
 section h1 {
     padding: 10px;
