--- a/css/mapbox-maps-api.css
+++ b/css/mapbox-maps-api.css
@@ -2,32 +2,47 @@
 #map {
     /* the width and height may be set to any size */
     width: 100%;
-    height: 800px;
-    margin-bottom: 15px;
+    height: 500px;
+    margin-bottom: 30px;
+    align-content: center;
+    border: black 2px;
+    margin: 2em;
+}
+.hidden {
+    visibility: hidden;
+}
+
+
+
+h1 {
+    text-align: center;
+    margin-top: 1em;
+}
+
+
+body {
+    background-image: linear-gradient(275deg, cyan, lightcyan);
 }
 
 button#resetMap {
-    border: 1px solid red;
+    border: 1px solid cyan;
     border-radius: 4px;
     padding: 3px;
-    background-color: red;
+    background-color: blue;
     color: white;
     cursor: pointer;
+    margin: 4px;
 }
-h4 {
-    font-weight: normal;
-    text-decoration: underline;
-}
-button.goToFavPlace {
-    border: 1px solid black;
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-    background-color: white;
+
+button#favPlace {
+    border: 1px solid cyan;
+    border-radius: 4px;
+    padding: 3px;
+    background-color: blue;
+    color: white;
     cursor: pointer;
+    margin: 4px;
 }
-.btn-row {
-    max-width: 800px;
-}
+
 
 
