--- a/WeatherMapProject/weather-map.css
+++ b/WeatherMapProject/weather-map.css
@@ -1,48 +1,85 @@
 
-#map {
-    /* the width and height may be set to any size */
+
+.geocoder{
+    display: flex;
+    justify-content: center;
     width: 100%;
-    height: 500px;
-    margin-bottom: 30px;
-    align-content: center;
-    border: black 2px;
-    margin: 2em;
 }
-.hidden {
-    visibility: hidden;
-}
-
-
-
-h1 {
-    text-align: center;
-    margin-top: 1em;
-}
-
-
-body {
-    background-image: linear-gradient(275deg, cyan, lightcyan);
-}
-
-button#resetMap {
-    border: 1px solid cyan;
-    border-radius: 4px;
-    padding: 3px;
-    background-color: blue;
+#search-btn{
+    border-radius: 10px;
+    background: black;
     color: white;
-    cursor: pointer;
-    margin: 4px;
+    margin-left: 10px;
 }
-
-button#favPlace {
-    border: 1px solid cyan;
-    border-radius: 4px;
-    padding: 3px;
-    background-color: blue;
+#search-box{
+    width: 50%;
+    height: 40px;
+    background: black;
     color: white;
-    cursor: pointer;
-    margin: 4px;
+}
+.background{
+    background-image: url("../img/KansasCity.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 1em;
+    padding: 12px;
+    width: auto;
+    height: auto;
+}
+.date{
+    display: flex;
+    justify-content: center;
+    background: lightgray;
+    color: black;
+    font-weight: bold;
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+}
+.geocoder{
+    padding-left: 10px;
+}
+.navbar{
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.HR{
+    background-color: black;
+    height: 2px;
+    width: 95%;
+    padding: 0;
+    margin: 0;
 }
 
+#map {
+    /*display: flex;*/
+    /* the width and height may be set to any size */
+    width: auto;
+    height: 700px;
+    margin: 1em;
+    /*border: black;*/
+    padding: 12px;
+}
 
+#weather{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+
+
+}
+.weatherCards{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: black solid 2px;
+    border-radius: 10px;
+    width: 220px;
+    color: lightgray;
+    background-color: rgba(100, 100, 100, 0.5); /* set a semi-transparent white background */
+    backdrop-filter: blur(2px); /* apply a blur filter to create the frosted effect */
+}
 
