--- a/WeatherMapProject/weather-map.css
+++ b/WeatherMapProject/weather-map.css
@@ -39,6 +39,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    width: 100%;
 }
 
 .weatherCards {
@@ -51,6 +52,7 @@
     color: lightgray;
     background-color: rgba(100, 100, 100, 0.5); /* set a semi-transparent white background */
     backdrop-filter: blur(2px); /* apply a blur filter to create the frosted effect */
+    box-shadow: 0px 0px 13px 0px #151618;
 }
 
 .date{
