--- a/Custom Weather Application - JS/main.css
+++ b/Custom Weather Application - JS/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');*/
 
 * {
     margin: 0;
@@ -30,9 +30,10 @@
     border-radius: 10px;
     box-shadow: 0px 0px 20px 0px #15535c;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    width: 100%;
+    align-content: center;
+    align-items: center;
 
 
 }
@@ -46,71 +47,70 @@
     border-radius: 10px;
     box-shadow: 0px 0px 13px 0px #151618;
     z-index: 1;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 220px;
-
+    width: 235px;
+    min-width: 220px;
 
 }
 
 
-
-
-/*#weather{*/
-
 /*}*/
 
-/*.cardInner {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    align-items: center;*/
-/*    border: black solid 2px;*/
-/*    border-radius: 10px;*/
-/*    width: 220px;*/
-/*    padding: 1em;*/
-/*    color: lightgray;*/
-/*    background-color:aliceblue;!* set a semi-transparent white background *!*/
-/*    backdrop-filter: blur(2px); !* apply a blur filter to create the frosted effect *!*/
-/*}*/
 
-/*.cards_wrap {*/
-/*    padding: 20px;*/
-/*    width: 100%;*/
-/*    !*display: grid;*!*/
-/*    !*grid-template-columns: repeat(3, 1fr);*!*/
-/*    !*justify-content: space-around;*!*/
-/*    !*flex-wrap: wrap;*!*/
-/*}*/
 
-/*.cardItem {*/
-/*    display: grid;*/
-/*    grid-template-columns: repeat(3, 1fr);*/
-/*    padding: 15px 25px;*/
-/*    width: 25%;*/
-/*    margin: 1em;*/
-/*    align-content: space-around;*/
-/*}*/
 
-/*.cardInner {*/
-/*    text-align: center;*/
-/*    align-content: space-evenly;*/
-/*    margin: 2em;*/
-/*    background: #fff;*/
-/*    border-radius: 5px;*/
-/*    padding: 20px 20px;*/
-/*    min-width: 225px;*/
-/*    min-height: 315px;*/
-/*    width: 100%;*/
-/*}*/
+/*!*#weather{*!*/
 
-/*.date{*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    background: lightgray;*/
-/*    color: black;*/
-/*    font-weight: bold;*/
-/*    width: 100%;*/
-/*    border-top-left-radius: 10px;*/
-/*    border-top-right-radius: 10px;*/
+/*!*}*!*/
+
+/*!*.cardInner {*!*/
+/*!*    display: flex;*!*/
+/*!*    flex-direction: column;*!*/
+/*!*    align-items: center;*!*/
+/*!*    border: black solid 2px;*!*/
+/*!*    border-radius: 10px;*!*/
+/*!*    width: 220px;*!*/
+/*!*    padding: 1em;*!*/
+/*!*    color: lightgray;*!*/
+/*!*    background-color:aliceblue;!* set a semi-transparent white background *!*!*/
+/*!*    backdrop-filter: blur(2px); !* apply a blur filter to create the frosted effect *!*!*/
+/*!*}*!*/
+
+/*!*.cards_wrap {*!*/
+/*!*    padding: 20px;*!*/
+/*!*    width: 100%;*!*/
+/*!*    !*display: grid;*!*!*/
+/*!*    !*grid-template-columns: repeat(3, 1fr);*!*!*/
+/*!*    !*justify-content: space-around;*!*!*/
+/*!*    !*flex-wrap: wrap;*!*!*/
+/*!*}*!*/
+
+/*!*.cardItem {*!*/
+/*!*    display: grid;*!*/
+/*!*    grid-template-columns: repeat(3, 1fr);*!*/
+/*!*    padding: 15px 25px;*!*/
+/*!*    width: 25%;*!*/
+/*!*    margin: 1em;*!*/
+/*!*    align-content: space-around;*!*/
+/*!*}*!*/
+
+/*!*.cardInner {*!*/
+/*!*    text-align: center;*!*/
+/*!*    align-content: space-evenly;*!*/
+/*!*    margin: 2em;*!*/
+/*!*    background: #fff;*!*/
+/*!*    border-radius: 5px;*!*/
+/*!*    padding: 20px 20px;*!*/
+/*!*    min-width: 225px;*!*/
+/*!*    min-height: 315px;*!*/
+/*!*    width: 100%;*!*/
+/*!*}*!*/
+
+/*!*.date{*!*/
+/*!*    display: flex;*!*/
+/*!*    justify-content: center;*!*/
+/*!*    background: lightgray;*!*/
+/*!*    color: black;*!*/
+/*!*    font-weight: bold;*!*/
+/*!*    width: 100%;*!*/
+/*!*    border-top-left-radius: 10px;*!*/
+/*!*    border-top-right-radius: 10px;*!*/
