--- a/WeatherMapProject/weather-map.css
+++ b/WeatherMapProject/weather-map.css
@@ -35,24 +35,30 @@
     color: white;
 }
 
-#weather{
+.card_area{
+    margin: 12px;
+    padding: 12px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    width: 100%;
+    align-content: center;
+    align-items: center;
 }
 
 .weatherCards {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: black solid 2px;
     border-radius: 10px;
     width: 220px;
     color: lightgray;
     background-color: rgba(100, 100, 100, 0.5); /* set a semi-transparent white background */
     backdrop-filter: blur(2px); /* apply a blur filter to create the frosted effect */
-    box-shadow: 0px 0px 13px 0px #151618;
+    /*box-shadow: 0px 0px 13px 0px #151618;*/
+    border: 2px solid #232427;
+    box-shadow: 0px 0px 20px 0px #15535c;
+    padding: 12px;
+    margin: 12px;
 }
 
 .date{
